# Laboratorio_Programmazione

./: CMakeLists.txt  README.md  Weapon.cpp  Weapon.h  main.cpp
Characters/: Enemy.cpp  Enemy.h  GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h
Patterns/: Observer.h  Subject.h
